--- a/carroussel.css
+++ b/carroussel.css
@@ -3,20 +3,22 @@
   }
   
   img {
+    display: block;
     max-width: 100%;
     height: auto;
   }
   
   .carrousel_parent-ecrans {
-    display: flex none;
-    justify-content: space-between;
-    max-width: 100%;
+    display: flex;
+    width: 100% ;
     overflow-x: scroll;
     scroll-behavior: smooth;
   }
   
   .carrousel_ecran {
-    flex: 1 0 auto;
+    flex: none;
+    width: 100%;
+    box-sizing: border-box;
   }
   
   .carrousel_ecran figure {
