--- a/src/css/carroussel.css
+++ b/src/css/carroussel.css
@@ -43,8 +43,8 @@ body {
     top: 30%;
     top: calc(
       min(500px, 60vw) / 16 * 9 / 2 + 1rem
-    ); /* centre verticalement ~50% vertical */
-    transform: translateY(-30%); /* methode du point mort */
+    ); 
+    transform: translateY(-50%); 
     width: 2rem;
     height: 2rem;
     background: rgba(0,0,0,0.5);
